# libwav

./: CMakeLists.txt
include/: dict.h  libwav.h
src/: dict.c  parse.c
